# neurocoevolution

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
algorithms/: trainer_ea.py  trainer_es.py  trainer_ga.py  worker_ea.py  worker_es.py  worker_ga.py
configs/: config_es_custom.yaml  config_es_default.yaml  config_es_test.yaml  config_ga_custom.yaml  config_ga_default.yaml  config_ga_test.yaml
poster/: poster.html
utils/: chromosome.py  pettingzooenv.py  policies.py
